@@ -1,3 +1,6 @@
+[B]Version 2.0.1[/B] - 20 April 2018
+Fix to download cover from Antikvarium.hu
+
 [B]Version 2.0.0[/B] - 29 March 2018
 Fix for Antikvarium.hu changes to html code
 Fix of error at opening options
